mingle card 2709 - remove legacy date generation code and replace with new date generation code that supports moratoria for ApplyCustomerFee batch job. This means refactoring AccountFeesEntity.getApplicableDatesCount which used to use MeetingBO.getAllDates(Date)
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@17194 a8845c50-7012-0410-95d3-8e1449b9b1e4